--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
